
2014-12-10

Version 1.7.4.1
 Changes in .cabal file
  - Removed upper limits for versions of Haskell Platform packages
  - Added address of repository
  - Removed lower limit for wxcore, as the wxcore version is defined by wx
  - Added -optl-s -j to GHC-Options
 
 
2014-08-13

Version 1.7.4
 - The version info is read from the .cabal file.
 - Removed upper limits for wx and wxcore version


2013-09-20

Version 1.7.3
 - Adapted to Haskell Platform 2013.2.0.0, wxWidgets 2.9.5 and
   wxHaskell 0.90.1.0. Amongst others, hierarchical module system
   introduced. GUI.hs: staticBitmapCreate has now 0x00200000
   (== wxBORDER_NONE) as style, as wxWidgets does not accept -1 as style
   anymore. The clientsize of the "move now" button is not set anymore,
   so the text fits. TicTacToe now repaints on resize


2010-10-20

Version 1.7.2
 - Increased the maximum version of base to < 5 .


2009-11-14 

Version 1.7.1
 - Added -Wall flag in the CABAL file 
 - Solved all compiler warnings.
 - Increased the maximum version of wx and wxcore to < 0.13 .
 - Added the file changelog.txt


2009-10-29 

Version 1.7
 - Adapted to wxWidgets 2.8.9 / wxHaskell 0.11.1.2 
 - Cabalized
